--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <h1>StopWatch</h1>
         <div class="clock">00:00:00</div>
 
         <div>
